# decol-gen

./: .gitignore  LICENSE  README.md  data  pyproject.toml  requirements.txt  results
.claude/projects/-home-stud-gnjinkap-decol-gen/memory/: MEMORY.md  project_progress.md  user_profile.md
configs/: baseline_rgb.yaml  exp_hsv.yaml  exp_lab.yaml
experiment_results/baseline_rgb/: metrics.csv  summary.json
experiment_results/exp_hsv/: metrics.csv  summary.json
experiment_results/exp_lab/: metrics.csv  summary.json
notebooks/: 01_visualize_colorspaces.ipynb
scripts/: train_all.sh  train_model.py
src/color_dg/: __init__.py
src/color_dg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/color_dg/color_spaces/: __init__.py  converter.py  transforms.py
src/color_dg/data/: __init__.py  loader.py
src/color_dg/losses/: __init__.py
src/color_dg/models/: __init__.py  resnet.py
tests/: conftest.py  test_color_spaces.py
